Fixed contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -20,7 +20,7 @@
 	--paragraph-color-on-color: white; /* paragraph text on a colored background */
 	--paragraph-background-color: #396e94;
 	--paragraph-background-color-alt: beige;
-	--nav-link-color: #396e94;
+	--nav-link-color: black;
 	--nav-background-color: var(--secondary-color);
 	--nav-hover-link-color: var(--accent1-color);
 	--nav-hover-background-color: var(--primary-color);
@@ -80,12 +80,12 @@ nav {
     grid-row: 1/3;
 }
 
-nav a {
-	color: var(--accent3-color);
+/* li a {
+	color: var(--nav-link-color);
 	text-align: center;
 	padding: 2rem;
 	text-decoration: none;
-}
+} */
 
 .navigation li a:hover,
 #active:hover {
@@ -123,17 +123,16 @@ nav a {
 	flex-direction: column;
 	list-style: none;
 	background-color: var(--secondary-color);
-	color: #fff;
 }
 .navigation li {
 	display: none;
 }
 .navigation li a {
+    color: var(--nav-link-color);
 	display: block;
 	padding: 1rem;
 	text-align: center;
 	text-decoration: none;
-	color: #fff;
 }
 
 /* when the button is clicked - the open class is toggle (added/removed) and accounted for here */
@@ -164,7 +163,7 @@ nav a {
 
 .button {
 	background-color: var(--nav-background-color);
-	color: var(--nav-link-color);
+	
 	grid-row: 1;
 	grid-column: 2/3;
 	position: absolute;
@@ -179,6 +178,7 @@ nav a {
 }
 
 .join {
+    color: var(--nav-link-color);
 	padding: 15px;
 	text-decoration: none;
 }
